--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-/* .triptico {
+.triptico {
 	position: relative;
 	width: 800px;
 	height: 530px;
@@ -45,8 +45,13 @@ h4, h2 {
 footer h4 {
 	border-top: 1px solid black;
 	background-color: yellow;
-} */
+} 
 
+
+
+
+
+/*
 .triptico {
 	position: relative;
 	width: 800px;
@@ -88,11 +93,12 @@ header p {
 	text-align: justify;
 }
 
-h4, h2 {
+section h4, h2 {
 	text-align: center;
 }
 
 footer h4 {
+	text-align: center;
 	float: bottom;
 	border-top: 1px solid black;
 	background-color: yellow;
